k8s/policies/allow-auth-api-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-auth-api-egress
spec:
  podSelector:
    matchLabels:
      app: auth-api
  policyTypes:
    - Egress
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: users-api
        - podSelector:
            matchLabels:
              app: zipkin
      ports:
        - protocol: TCP
          port: 8083
        - protocol: TCP
          port: 9411
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
