k8s/policies/allow-frontend-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-frontend-egress
spec:
  podSelector:
    matchLabels:
      app: frontend
  policyTypes:
    - Egress
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: auth-api
        - podSelector:
            matchLabels:
              app: todos-api
        - podSelector:
            matchLabels:
              app: zipkin
      ports:
        - protocol: TCP
          port: 8000
        - protocol: TCP
          port: 8082
        - protocol: TCP
          port: 9411
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
