k8s/policies/allow-ingress-to-frontend.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-to-frontend
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: ingress
  policyTypes:
  - Egress
  egress:
   - to:
      - podSelector:
          matchLabels:
            app: frontend
     ports:
     - protocol: UDP
       port: 8080
