k8s/policies/allow-log-message-processor-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-log-message-processor-egress
spec:
  podSelector:
    matchLabels:
      app: log-message-processor
  policyTypes:
    - Egress
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: redis
        - podSelector:
            matchLabels:
              app: zipkin
      ports:
        - protocol: TCP
          port: 6379
        - protocol: TCP
          port: 9411
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
