k8s/policies/allow-redis-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-redis-ingress
spec:
  podSelector:
    matchLabels:
      app: redis
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: todos-api
        - podSelector:
            matchLabels:
              app: log-message-processor
      ports:
        - protocol: TCP
          port: 6379
