k8s/policies/allow-users-api-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-users-api-egress
spec:
  podSelector:
    matchLabels:
      app: users-api
  policyTypes:
    - Egress
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: zipkin
      ports:
        - protocol: TCP
          port: 9411
