k8s/policies/allow-zipkin-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-zipkin-ingress
spec:
  podSelector:
    matchLabels:
      app: zipkin
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector: { matchLabels: { app: frontend } }
        - podSelector: { matchLabels: { app: auth-api } }
        - podSelector: { matchLabels: { app: todos-api } }
        - podSelector: { matchLabels: { app: users-api } }
        - podSelector: { matchLabels: { app: log-message-processor } }
      ports:
        - protocol: TCP
          port: 9411
